[project]
name = "pytrade.org"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "afterpython>=0.3.14",
    "juv>=0.5.0",
]
authors = [{name = "softwareentrepreneer", email = "softwareentrepreneer@gmail.com"}]

[project.urls]
homepage = "https://pytrade.org"
repository = "https://github.com/PFund-Software-Ltd/pytrade.org"
documentation = "https://pytrade.org/doc"
[dependency-groups]
dev = [
    "marimo[lsp,recommended]>=0.23.8",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.16"]
build-backend = "uv_build"
